--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -6,6 +6,7 @@
         ? 'text-bold h5 text-black text-decoration-underline'
         : 'text-black'
     "
+    [title]="'footer.english' | translate"
   >
     {{ "footer.english" | translate }}</a
   >
@@ -17,6 +18,7 @@
         ? 'text-black'
         : 'text-bold h5 text-black text-decoration-underline'
     "
+    [title]="'footer.arabic' | translate"
   >
     {{ "footer.arabic" | translate }}</a
   >
