--- a/src/app/components/admin/add-room/add-room.component.html
+++ b/src/app/components/admin/add-room/add-room.component.html
@@ -240,13 +240,17 @@
           </div>
         </div>
       </div>
-      <button class="mt-4 btn-submit">
+      <button class="mt-4 btn-submit" [title]="'shared.submit' | translate">
         {{ "room.submit" | translate }}
       </button>
     </form>
   </div>
 
-  <button class="mt-4 ms-4 btn-outline-primary rounded-2" (click)="goBack()">
+  <button
+    class="mt-4 ms-4 btn-outline-primary rounded-2"
+    (click)="goBack()"
+    [title]="'shared.action.go-back' | translate"
+  >
     @if(lang == 'ar') {
     <i class="fa-solid fa-arrow-right"></i>
     } @else {
