--- a/src/app/components/admin/manage-users/manage-users.component.html
+++ b/src/app/components/admin/manage-users/manage-users.component.html
@@ -1,12 +1,14 @@
 <div class="page">
   <div class="d-flex flex-row justify-content-between">
-    <h1 class="m-4 mb-4">
-      {{ "user.roles.users" | translate }}
+    <div class="d-flex">
+      <h1 class="m-4">
+        {{ "user.roles.users" | translate }}
+      </h1>
       <img
         class="fill-icon"
         src="/assets/images/manage-users-brown-filled-icon.png"
       />
-    </h1>
+    </div>
     <button
       class="btn btn-primary m-4"
       (click)="AddEmployee()"
