--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -1,11 +1,14 @@
 <div class="d-flex">
-  <h1 class="m-4 mb-4">{{ "reservation.reservations" | translate }}</h1>
-  <img src="/assets/images/reservations-brown-filled-icon.png" />
+  <h1 class="m-4">{{ "reservation.reservations" | translate }}</h1>
+  <img
+    class="fill-icon p-0"
+    src="/assets/images/reservations-brown-filled-icon.png"
+  />
 </div>
 
 <div class="page">
   @if(pendingReservations.length >0){
-  <h1 class="m-4 mb-4">{{ "reservation.pending" | translate }}</h1>
+  <h1 class="m-4">{{ "reservation.pending" | translate }}</h1>
   <div class="rounded-4 shadow border overflow-hidden mb-5">
     <table class="table table-striped table-bordered mb-0">
       <thead>
