Add Translation  On Elements That Show When There Is No Data

--- a/src/app/components/admin/rooms/rooms.component.html
+++ b/src/app/components/admin/rooms/rooms.component.html
@@ -74,7 +74,7 @@
 </div>
 
 <ng-template #noRooms>
-  <p class="no-rooms-msg">No available rooms at the moment.</p>
+  <p class="no-rooms-msg">{{ "room.no-available-rooms" | translate }}</p>
 </ng-template>
 
 <p-toast />
