--- a/src/app/components/customer/available-services/available-services.component.html
+++ b/src/app/components/customer/available-services/available-services.component.html
@@ -17,5 +17,5 @@
 </div>
 
 <ng-template #noServices>
-  <p>No available services at the moment.</p>
+  <p> {{ 'service.no-available-services' | translate }} </p>
 </ng-template>
