--- a/src/app/components/admin/reservations/reservations.component.html
+++ b/src/app/components/admin/reservations/reservations.component.html
@@ -73,7 +73,9 @@
     </table>
   </div>
   } @else {
-  <h3 class="text-center mt-5">No Pending Appointments</h3>
+  <h3 class="text-center mt-5">
+    {{ "reservation.no-pending-reservations" | translate }}
+  </h3>
   } @if(activeReservations.length > 0){
   <h1 class="m-4 mb-4">{{ "reservation.active" | translate }}</h1>
   <div class="rounded-4 shadow border overflow-hidden">
@@ -118,7 +120,9 @@
     </table>
   </div>
   } @else {
-  <h3 class="text-center">No Active Appointments</h3>
+  <h3 class="text-center">
+    {{ "reservation.no-active-reservations" | translate }}
+  </h3>
   }
 </div>
 <p-toast />
