Center Submit Button

--- a/src/app/components/admin/add-employee/add-employee.component.html
+++ b/src/app/components/admin/add-employee/add-employee.component.html
@@ -214,9 +214,18 @@
           </div>
         </div>
       </div>
-      <button class="mt-4 btn-submit" [title]="'profile.submit' | translate">
-        {{ "profile.submit" | translate }}
-      </button>
+
+      <div class="input-container">
+        <label></label>
+        <div class="input-error">
+          <button
+            class="mt-4 btn-submit"
+            [title]="'profile.submit' | translate"
+          >
+            {{ "profile.submit" | translate }}
+          </button>
+        </div>
+      </div>
     </form>
   </div>
 
