--- a/src/app/components/shared/rooms/rooms.component.html
+++ b/src/app/components/shared/rooms/rooms.component.html
@@ -5,6 +5,7 @@
     </h1>
     <img class="fill-icon" src="/assets/images/bed-brown-filled-icon.png" />
   </div>
+  @if(user?.role == "Admin"){
   <button
     class="btn btn-primary"
     (click)="AddRoom()"
@@ -13,6 +14,7 @@
     <i class="bi bi-house-add-fill h4 m-1 align-middle"></i>
     <span class="m-1 align-middle">{{ "room.add-room" | translate }}</span>
   </button>
+  }
 </div>
 
 <div class="rooms-container">
@@ -66,7 +68,6 @@
       <button class="book-btn btn-primary" (click)="bookRoom(room)">
         Book Now
       </button>
-
       }
     </div>
   </div>
