Show Slide Buttons If There Is More Than 1 Image

--- a/src/app/components/shared/room-details/room-details.component.html
+++ b/src/app/components/shared/room-details/room-details.component.html
@@ -10,12 +10,12 @@
         />
       </div>
       <i
-        *ngIf="images.length"
+        *ngIf="images.length > 1"
         class="slide-icon fa-solid fa-angle-left"
         (click)="prevImage()"
       ></i>
       <i
-        *ngIf="images.length"
+        *ngIf="images.length > 1"
         class="slide-icon fa-solid fa-angle-right"
         (click)="nextImage()"
       ></i>
