--- a/src/app/components/admin/add-employee/add-employee.component.html
+++ b/src/app/components/admin/add-employee/add-employee.component.html
@@ -11,9 +11,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
+              <span class="input-group-text align-self-center bg-white"
                 ><i class="fa-solid fa-user"></i>
               </span>
             </div>
@@ -43,9 +41,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
+              <span class="input-group-text align-self-center bg-white"
                 ><i class="fa-solid fa-envelope"></i>
               </span>
             </div>
@@ -76,10 +72,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
-              >
+              <span class="input-group-text align-self-center bg-white">
                 <i class="fa-solid fa-phone"></i>
               </span>
             </div>
@@ -110,10 +103,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
-              >
+              <span class="input-group-text align-self-center bg-white">
                 <i class="fa-solid fa-briefcase"></i>
               </span>
             </div>
@@ -145,10 +135,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
-              >
+              <span class="input-group-text align-self-center bg-white">
                 <i class="fa-solid fa-lock"></i>
               </span>
             </div>
@@ -185,10 +172,7 @@
         <div class="input-error">
           <div class="input-group" [ngClass]="{ 'right-input': lang == 'ar' }">
             <div class="align-self-center">
-              <span
-                class="input-group-text align-self-center bg-white"
-                id="basic-addon1"
-              >
+              <span class="input-group-text align-self-center bg-white">
                 <i class="fa-solid fa-check-double"></i>
               </span>
             </div>
