Fix Button Styling

--- a/src/app/components/shared/rooms/rooms.component.scss
+++ b/src/app/components/shared/rooms/rooms.component.scss
@@ -12,6 +12,11 @@
   cursor: pointer;
 }
 
+.btn {
+  align-self: center;
+  margin: 0;
+}
+
 .room-card {
   position: relative;
   background: #fff;
