--- a/src/app/components/shared/auth/sign-up/sign-up.component.html
+++ b/src/app/components/shared/auth/sign-up/sign-up.component.html
@@ -66,4 +66,10 @@
   <div class="d-flex justify-content-center">
     <button class="btn-primary" type="submit">Sign Up</button>
   </div>
+  <p style="text-align: center; margin-top: 1rem">
+    Already have an account?
+    <a routerLink="/login" style="font-weight: bold; display: inline-block"
+      >Login!</a
+    >
+  </p>
 </form>
