--- a/src/app/components/admin/add-employee/add-employee.component.scss
+++ b/src/app/components/admin/add-employee/add-employee.component.scss
@@ -35,6 +35,7 @@
   width: 50%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -82,9 +83,10 @@ input {
 
 .error {
   color: $color-red;
+  text-align: start;
+  width: 100%;
   font-size: 14px;
-  margin-bottom: 10px;
-  margin-top: -6px;
+  margin: -6px 10px 10px 50px;
   font-weight: bold;
 }
 
